# make-ex

./: CMakeLists.txt  Makefile  README.md
srcs/: conv.c  conv.h  enum.c  main.cpp  myclass.cpp  myclass.hpp  power.c  power.h  print.h  print_num.c  print_str.cpp  strng.c  strng.h
